@@ -2,6 +2,13 @@
 #include "../prt/enums.hpp"
 #include <cstdint>
 #include <vector>
+
+#define bswap(x) \
+    +   ((((x) & 0xff000000) >> 24) | \
+    +    (((x) & 0x00ff0000) >>  8) | \
+    +    (((x) & 0x0000ff00) <<  8) | \
+    +    (((x) & 0x000000ff) << 24))
+
 // base class for file type detection
 
 struct dType {
