@@ -1,11 +1,5 @@
 #include "tgaparser.hpp"
 
-#define bswap(x) \
-    +   ((((x) & 0xff000000) >> 24) | \
-    +    (((x) & 0x00ff0000) >>  8) | \
-    +    (((x) & 0x0000ff00) <<  8) | \
-    +    (((x) & 0x000000ff) << 24))
-
 TGAParser::TGAParser() {
     priority=2;
     Reset();
