@@ -1,9 +1,4 @@
 #include "zlibparser.hpp"
-#define bswap(x) \
-    +   ((((x) & 0xff000000) >> 24) | \
-    +    (((x) & 0x00ff0000) >>  8) | \
-    +    (((x) & 0x0000ff00) <<  8) | \
-    +    (((x) & 0x000000ff) << 24))
     
 zlibParser::zlibParser(bool b) {
     priority=b==true?3:1;
