@@ -24,6 +24,7 @@ modparser       2     AUDIO
 sgiparser       2     IMAGE8
 tgaparser       2     IMAGE8GRAY,IMAGE8,IMAGE24,IMAGE32
 cdparser        0     CD
+mdfparser       0     MDF
 
 Priority  - is set by parser and type is returned by parser.
 Type - is what the parser reports to "analyzer" if something was found.
