@@ -1,7 +1,8 @@
 v114
     -Add pdf lzw, gif, dBase, pdf bitmap, aiff, ascii85,
      base64 (stream), base64 (multiline), mod, sgi/rgb,
-     tga, cd parser.
+     tga, cd, mdf parser.
+    -Some cleanup
     -Change Analyzer and Codec so that parent type is passed on in recursion.
     -Move LZSS to separate header
     -Disable zlib parser if parent type is ZLIB
